[package]
name = "radical-native"
description = "Extending Riot Web with native capabilities"
authors = ["stoically <stoically@protonmail.com>"]
version = "0.1.0-beta.15"
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.31"
base64 = "0.12.2"
byteorder = "1.3.4"
dirs = "3.0.0"
keytar = { git = "https://github.com/stoically/keytar-rs", rev = "2dffd9f" }
rand = "0.7.3"
serde = "1.0.114"
serde_json = "1.0.55"
seshat = "2.1.0"

[dev-dependencies]
tempfile = "3.1.0"

[package.metadata.deb]
depends = "libsecret-1-0, libsqlcipher0"
section = "utils"
extended-description = """\
Features
    Search functionality in encrypted rooms using seshat
    Secure OS key storage for pickle keys using keytar

Supported Browsers
    Firefox"""

assets = [
    ["target/release/radical-native", "/usr/bin/", "755"],
    ["target/release/radical.native.json", "/usr/lib/mozilla/native-messaging-hosts/", "644"]
]
