[package]
name = "radical-native"
description = "Extending Riot Web with native capabilities"
authors = ["stoically <stoically@protonmail.com>"]
version = "0.1.0-beta.15"
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.42"
base64 = "0.13.0"
byteorder = "1.4.3"
dirs = "3.0.2"
keytar = "0.1.4"
rand = "0.8.4"
# Pinned because of https://github.com/matrix-org/seshat/blob/632075eeb03e11875d72382b701a9bd3f53e1f35/Cargo.toml#L36-L43
serde = "=1.0.118"
serde_json = "=1.0.61"
seshat = "2.3.0"

[dev-dependencies]
tempfile = "3.2.0"

[package.metadata.deb]
depends = "libsecret-1-0, libsqlcipher0"
section = "utils"
extended-description = """\
This is a host application for Radical Native browser extension that enhances Riot Web with native capabilities.
The communication is handled through Native Messaging API.
.
Features
    Search functionality in encrypted rooms using seshat
    Secure OS key storage for pickle keys using keytar\
"""

assets = [
    ["target/release/radical-native", "/usr/bin/", "755"],
    ["target/release/radical.native.json", "/usr/lib/mozilla/native-messaging-hosts/", "644"]
]
